# RaincoatCat

./: .gitignore  Cargo.toml  README.md
migrations/: 20220220015507_roles.down.sql  20220220015507_roles.up.sql  20220220064824_role_descriptions.down.sql  20220220064824_role_descriptions.up.sql  20220220082745_permissions.up.sql  20220220155202_verification.down.sql  20220220155202_verification.up.sql  20220221003336_punishments.down.sql  20220221003336_punishments.up.sql
src/: config.rs  error.rs  main.rs
src/commands/: manage_roles.rs  mod.rs  punishments.rs  role.rs  verification.rs
src/model/: mod.rs  optional_role.rs  punishment.rs  punishment_removed_role.rs  server.rs
