[package]
name = "raincoat_cat"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "^1.16.1", features = ["macros", "rt-multi-thread"] }

serenity = { version = "^0.10", default-features = false, features = ["client", "gateway", "cache", "rustls_backend", "model", "unstable_discord_api"] }

sqlx = { version = "=0.5.7", features = [ "postgres", "runtime-tokio-rustls" ]}
sea-orm = { version = "0.5.0", default-features = false, features = [ "sqlx-postgres", "runtime-tokio-rustls", "debug-print", "macros" ]}

serde = { version = "^1.0.136", features = ["derive"] }
toml = "^0.5.8"

tracing = "^0.1.30"
tracing-subscriber = "^0.3.8"
